refactor: Update app branding and version
- Change application title and welcome messages to reflect the new branding: "Ứng dụng Ôn tập, ôn thi chứng chỉ chuyên môn phương tiện thủy nội địa".
- Update version number to v2.9.8 and add company copyright information to the footer.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trắc Nghiệm Pro</title>
+    <title>Ứng dụng Ôn tập, ôn thi chứng chỉ chuyên môn phương tiên thủy nội địa</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @keyframes slide-in-right {
