feat(ui): Update "Tri Ân" theme with new background
Applies a new background image to the "Tri Ân" theme, enhancing the pedagogical atmosphere with a classroom visual. Also updates version numbers across the application.

--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
         color: hsl(var(--foreground));
       }
 
+      [data-theme='tri-an'] body {
+        background-image: url('https://hykypgxaegmufdothwbv.supabase.co/storage/v1/object/public/TND/Screenshot%202025-11-03%20050600.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+      }
+
       .font-quiz-default {
         font-family: 'Be Vietnam Pro', sans-serif;
       }
