feat: Update app icon and version to v3.2.2
Updates the application's favicon and related logos to a new image.
Increments the version number in metadata and footer to v3.2.2.
Adds v3.2.2 to the changelog.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi" data-theme="tri-an">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://i.postimg.cc/Qd9GZJmK/Gakuseisean-Ivista-2-Misc-Download-Database-256.png" />
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/8PDn1wfM/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ứng dụng Ôn tập, ôn thi chứng chỉ chuyên môn phương tiên thủy nội địa</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6121118706628509"
